--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -81,6 +81,7 @@
   cursor: pointer;
   transition: 0.3s;
   box-shadow: 0 8px 18px rgba(255, 65, 65, 0.25);
+  margin: 40px auto 80px;
 }
 
 .shopcategory-loadmore:hover{
@@ -191,5 +192,6 @@
     height: 48px;
     font-size: 14px;
     margin-top: 40px;
+    margin: 40px auto 80px;
   }
 }
